services: comments: Add field for storing coordinates
